<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="overview_string">OVERVIEW</string>
    <string name="imageviewmovie">imageViewMovie</string>
    <string name="ratingString">Rating : \t</string>
    <string name="releaseDateString">Release Date : \t</string>

    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="favorites">Favorites</string>
    <string name="poster_film">Poster Film</string>

...
